--- a/sustainability/pom.xml
+++ b/sustainability/pom.xml
@@ -23,10 +23,10 @@
 		<db.url>jdbc:mysql://localhost:3306/sustain?serverTimezone=UTC</db.url>
 		<db.user>sustain</db.user>
 		<db.password>sustain</db.password>
-		
+
 		<tomcat.deploy.path></tomcat.deploy.path>
-        <tomcat.app.name>sustainability-db</tomcat.app.name>
-        <tomcat.server.id>TomcatServer</tomcat.server.id>
+		<tomcat.app.name>sustainability-db</tomcat.app.name>
+		<tomcat.server.id>TomcatServer</tomcat.server.id>
 	</properties>
 
 	<dependencyManagement>
@@ -221,9 +221,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.opencsv</groupId>
-			<artifactId>opencsv</artifactId>
-			<version>4.3</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.6</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
@@ -292,15 +292,15 @@
 				</configuration>
 			</plugin>
 			<plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <url>${tomcat.deploy.path}</url>
-                    <server>${tomcat.server.id}</server>
-                    <path>/${tomcat.app.name}</path>
-                </configuration>
-            </plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>${tomcat.deploy.path}</url>
+					<server>${tomcat.server.id}</server>
+					<path>/${tomcat.app.name}</path>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
