--- a/sustainability/pom.xml
+++ b/sustainability/pom.xml
@@ -15,7 +15,7 @@
 		<spring-data.version>Kay-SR8</spring-data.version>
 		<spring.version>5.0.7.RELEASE</spring.version>
 		<spring-security-version>4.1.3.RELEASE</spring-security-version>
-		<admin.password>admin</admin.password>
+		<admin.password>$2a$04$rHKnblcgQFsGPpqaEKPjAOkOy6PSBKefmeP8Rs7woocvR0fmzn3eq</admin.password>
 
 		<log.level>debug</log.level>
 
