--- a/sustainability/pom.xml
+++ b/sustainability/pom.xml
@@ -79,12 +79,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
 
 		<!-- Spring Security -->
 		<dependency>
@@ -126,6 +120,14 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.8.9</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.glassfish.web/el-impl -->
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
+			<version>2.2</version>
+		</dependency>
+
 
 		<!-- Validation -->
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
