[SUS-4] still trying to fix el issue

--- a/sustainability/pom.xml
+++ b/sustainability/pom.xml
@@ -121,12 +121,13 @@
 			<version>1.8.9</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.glassfish.web/el-impl -->
+		<!-- https://mvnrepository.com/artifact/javax.el/javax.el-api -->
 		<dependency>
-			<groupId>org.glassfish.web</groupId>
-			<artifactId>el-impl</artifactId>
-			<version>2.2</version>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>3.0.0</version>
 		</dependency>
+
 
 
 		<!-- Validation -->
