--- a/sustainability/src/main/resources/config.properties
+++ b/sustainability/src/main/resources/config.properties
@@ -2,4 +2,6 @@ db_driver=${db.driver}
 db_url=${db.url}
 db_user=${db.user}
 db_password=${db.password}
-conceptRoles=Researcher, Practitioner
+
+concept_role_researcher=Researcher
+concept_role_practitioner=Practitioner
