[SUS-18] retrieve text info from Amphora asynchronously
store it locally, show title/year on text page;

--- a/sustainability/pom.xml
+++ b/sustainability/pom.xml
@@ -10,11 +10,9 @@
 
 	<properties>
 		<org.slf4j-version>1.7.5</org.slf4j-version>
-		<org.springframework-version>4.3.1.RELEASE</org.springframework-version>
-		<spring-security-version>4.1.5.RELEASE</spring-security-version>
-		<spring-data.version>Kay-SR8</spring-data.version>
-		<spring.version>5.0.7.RELEASE</spring.version>
-		<spring-security-version>4.1.3.RELEASE</spring-security-version>
+		<spring-security-version>5.1.1.RELEASE</spring-security-version>
+		<spring-data.version>Lovelace-RELEASE</spring-data.version>
+		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit-version>5.3.1</junit-version>
 		<admin.password>$2a$04$rHKnblcgQFsGPpqaEKPjAOkOy6PSBKefmeP8Rs7woocvR0fmzn3eq</admin.password>
 
@@ -24,6 +22,9 @@
 		<db.url>jdbc:mysql://localhost:3306/sustain?serverTimezone=UTC</db.url>
 		<db.user>sustain</db.user>
 		<db.password>sustain</db.password>
+
+		<amphora.url></amphora.url>
+		<amphora.token></amphora.token>
 
 		<tomcat.deploy.path></tomcat.deploy.path>
 		<tomcat.app.name>sustainability-db</tomcat.app.name>
@@ -70,6 +71,10 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -79,6 +84,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webflux -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webflux</artifactId>
+		</dependency>
+
 
 		<!-- Spring Security -->
 		<dependency>
@@ -126,6 +137,20 @@
 			<groupId>javax.el</groupId>
 			<artifactId>javax.el-api</artifactId>
 			<version>3.0.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.projectreactor.netty/reactor-netty -->
+		<dependency>
+			<groupId>io.projectreactor.netty</groupId>
+			<artifactId>reactor-netty</artifactId>
+			<version>0.8.2.RELEASE</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+		<dependency>
+			<groupId>org.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>3.6.1</version>
 		</dependency>
 
 
