--- a/sustainability/src/main/resources/config.properties
+++ b/sustainability/src/main/resources/config.properties
@@ -2,3 +2,7 @@ db_driver=${db.driver}
 db_url=${db.url}
 db_user=${db.user}
 db_password=${db.password}
+
+amphora_url=${amphora.url}
+amphora_token=${amphora.token}
+amphora_resource_endpoint=resource/get?uri={uri}&format=json
