[SUS-1] addressed pull request comments
also moved some files and changed naming

--- a/sustainability/src/main/resources/config.properties
+++ b/sustainability/src/main/resources/config.properties
@@ -3,5 +3,5 @@ db_url=${db.url}
 db_user=${db.user}
 db_password=${db.password}
 
-concept_role_researcher=Researcher
-concept_role_practitioner=Practitioner
+concept_role_researcher=Sustainable Development Goals
+concept_role_practitioner=Areas of Interest
