[SUS-19] texts can be upated

--- a/sustainability/src/main/resources/config.properties
+++ b/sustainability/src/main/resources/config.properties
@@ -10,3 +10,4 @@ amphora_url=${amphora.url}
 amphora_token=${amphora.token}
 amphora_resource_endpoint=resource/get?uri={uri}&format=json
 
+task_executor_pool_size=4
